<resources>

    <string name="app_name">RetroShare Remote</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">RetroShare Remote</string>
    <string name="connect">connect</string>
    <string name="leave_lobby">leave lobby</string>
    <string name="send_chat">send chat</string>
    <string name="insert_message_here">insert message here</string>
    <string name="peers">peers</string>
    <string name="chat">chat</string>
    <string name="chat_lobbies">chat lobbies</string>
    <string name="add_friend">add friend</string>
    <string name="hostname">hostname</string>
    <string name="port">port</string>
    <string name="user">user</string>
    <string name="password">password</string>
    <string name="error">error</string>
    <string name="err_unknown_host">could not get ip for  this hostname</string>
    <string name="err_no_route_to_host">could not contact server. maybe you are not connected to a network.</string>
    <string name="err_connection_refused">host refused connection: ip or port wrong or server not running</string>
    <string name="err_bad_signature">the servers public is not the same as last time</string>
    <string name="err_auth_failed">ssh authentification failed: wrong  user or password</string>
    <string name="err_send">error while sending</string>
    <string name="err_receive">error while receiving</string>
    <string name="block_friend">(TODO) block friend</string>
    <string name="system_status">(TODO) system status</string>
    <string name="connection_error">connection error</string>
    <string name="connected">connected</string>
    <string name="not_connected">not connected</string>
    <string name="new_message">new message</string>
    <string name="new_private_chat_message">new private chat message</string>
    <string name="new_lobby_chat_message">new lobby chat message</string>
    <string name="topic">topic</string>
    <string name="bandwidth_up_down">bandwidth up/down</string>
    <string name="network_status">network status</string>
    <string name="files">files</string>
    <string-array name="file_actions">
        <item >continue</item>
        <item >wait</item>
        <item >pause</item>
        <item >restart</item>
        <item >check</item>
        <item >cancel</item>
        <item >show link as qrcode</item>
    </string-array>
        <string name="filename">filename:</string>
        <string name="size">size:</string>
        <string name="hash">hash:</string>
        <string name="download">download</string>
        <string name="rate">rate:</string>
        <string name="search">search</string>

</resources>